--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="page-icon.ico">
     <link href="https://fonts.googleapis.com/css?family=Prata|Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <title>JobSnap - Recruitment Management System</title>
+    <title>Jobsnap - Recruitment Management System</title>
   </head>
   <body>
     <noscript>
